After metric creation and trying to populate the new csv, not really working, now error in BookkeeperMetricsRunner